@@ -81,6 +81,7 @@ Read pb
         Post_processing
 	{
 		Format lml
+		Sondes_fichier { fichier sondes }
                 fields dt_post 2
 		{
 		    pression 				som
